--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -98,7 +98,6 @@ html {
   z-index: -3;
 }
 
-/* Aggiunta di una sottile texture di sfondo */
 .gradient-wrapper::before {
   content: '';
   position: absolute;
@@ -112,16 +111,39 @@ html {
   z-index: -1;
 }
 
-.server-offline {
-  display: flex;
+.db-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
   height: 100vh;
+  background: rgba(0, 0, 0, 0.75);
+  display: flex;
   justify-content: center;
   align-items: center;
-  color: white;
-  font-size: 1.8rem;
+  z-index: 9999;
+}
+
+.db-overlay-content {
   text-align: center;
-  padding: 1rem;
-  position: relative
+  color: white;
+  font-size: 1.2rem;
+}
+
+.spinner {
+  width: 40px;
+  height: 40px;
+  border: 5px solid #ccc;
+  border-top: 5px solid white;
+  border-radius: 50%;
+  margin: 0 auto 1rem;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
 }
 
 /* --- RESPONSIVE --- */
