--- a/client/src/navbar/Navbar.css
+++ b/client/src/navbar/Navbar.css
@@ -41,12 +41,12 @@
   padding: 0.5rem 1rem;
   cursor: pointer;
   transition: border-bottom-color 0.3s ease, color 0.3s ease;
-  border-bottom-color: rgb(255, 0, 255);
+  border-bottom-color: rgb(1, 143, 179);
   transition: all 0.3s ease;
 }
 
 .navbar-button:hover {
-  border-bottom-color: rgb(150, 0, 137);
+  border-bottom-color: rgb(0, 204, 255);
   transform: translateY(-2px);
 }
 
@@ -56,7 +56,7 @@
 }
 
 .navbar-avatar {
-  background-color: rgb(0, 204, 255);
+  background-color: rgb(1, 143, 179);
   color: white;
   border-radius: 50%;
   width: 2.5rem;
@@ -109,6 +109,7 @@
   margin: 0 1rem;
 }
 
+/* --- RESPONSIVE --- */
 @media (max-width: 600px) {
   .navbar {
     padding: 0.5rem 0.5rem;
