--- a/client/src/css/ManageUsers.css
+++ b/client/src/css/ManageUsers.css
@@ -1,18 +1,16 @@
 .manage-users-container {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-
-    background-color: rgba(255, 255, 255, 0.4);
-    backdrop-filter: blur(50px);
-    padding: 2rem;
-    border-radius: 25px;
-    box-shadow: 0 25px 25px rgba(0, 0, 0, 0.4);
-
-    width: 90%;
-    max-width: 500px;
-    text-align: center;
+    max-width: 75vw;
+  width: 100vw;
+  max-height: 100vh;
+  max-height: 85vh;
+  background-color: rgba(255, 255, 255, 0.4);
+  backdrop-filter: blur(50px);
+  border-radius: 25px;
+  box-shadow: 0 25px 25px rgba(0, 0, 0, 0.4);
+  padding: 2rem;
+  overflow: auto;
+  scrollbar-width: none;
+  box-sizing: border-box;
 }
 
 .user-table {
